# task

./: .beman-tidy.yaml  .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Makefile  README.md  issues-overview.md
.devcontainer/: devcontainer.json
.github/workflows/: ci_tests.yml  pre-commit-check.yml  pre-commit.yml
cmake/: Config.cmake.in  beman-install-library.cmake
docs/: Makefile  P3796-task-issues.md  P3941-affinity.md  P3980-allocation.md  affinity.md  examples.md  issues-overview.md  issues.md  summary.md  task-issues.md
docs/issues/: affine_on-customisation.html  affine_on-semantics.html  affine_on-shape.html  affine_on-vs-stop_token.html  allocator-customisation.html  allocator-position.html  allocator-shadowning.html  bulk-vs-task_scheduler.html  change-scheduler.html  co_await-task.html  empty.html  late-release.html  missing-noexcept.html  missing-rvalue-task.html  missing-rvalue-ts-sender.html  missing-template-defaults.html  no-affine_on-spec.html  return_value-default.html  return_void.html  stop-source.html  symmetric-transfer.html  task-not-lazy.html
examples/: CMakeLists.txt  affinity.cpp  aggregate-return.cpp  aggregate_return.cpp  alloc-1.cpp  alloc-2.cpp  alloc.cpp  alloc_1.cpp  alloc_2.cpp  async_lock.cpp  bulk.cpp  c++now-errors.cpp  c++now_affinity.cpp  c++now_allocator.cpp  c++now_basic.cpp  c++now_cancel.cpp  c++now_errors.cpp  c++now_query.cpp  c++now_result_types.cpp  c++now_return.cpp  c++now_stop_token.cpp  c++now_with_error.cpp  co_await_result.cpp  co_await_task.cpp  container.cpp  cppnow_affinity.cpp  cppnow_allocator.cpp  cppnow_basic.cpp  cppnow_cancel.cpp  cppnow_errors.cpp  cppnow_query.cpp  cppnow_result_types.cpp  cppnow_return.cpp  cppnow_stop_token.cpp  cppnow_with_error.cpp  customize.cpp  dangling-references.cpp  dangling_references.cpp  demo-thread_loop.hpp  demo-tls_scheduler.hpp  (+32 more)
include/beman/: task.hpp
include/beman/task/: task.hpp
include/beman/task/detail/: affine_on.hpp  allocator_of.hpp  allocator_support.hpp  awaiter.hpp  find_allocator.hpp  handle.hpp  inline_scheduler.hpp  into_optional.hpp  poly.hpp  promise_base.hpp  promise_env.hpp  promise_type.hpp  result_type.hpp  scheduler_of.hpp  state.hpp  state_base.hpp  state_rep.hpp  sub_visit.hpp  task.hpp  task_scheduler.hpp  with_error.hpp
infra/cmake/: msvc-toolchain.cmake
src/beman/task/: CMakeLists.txt
tests/beman/task/: CMakeLists.txt  affine_on.test.cpp  final_awaiter.test.cpp  msvc-asan-issue.test.cpp  promise_base.test.cpp  promise_type.test.cpp  state_base.test.cpp  task.test.cpp  task_scheduler.test.cpp
